[package]
name = "taps"
version = "0.1.0"
authors = ["stuart <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio" }
tokio-util = { git = "https://github.com/tokio-rs/tokio" }
snafu = { version = "0.6.0", features = ["futures"] }
lazy_static = "1.4.0"
enum-map = "0.6.1"
serde = "1.0.102"
futures = { version = "0.3.1", features = ["compat"] }
async-trait = "0.1.18"
bytes = "0.5.2"
trust-dns-resolver = "0.18.0-alpha.1"
http = "0.1.19"
