[package]
name = "taps"
version = "0.1.0"
authors = ["stuart <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2" }
snafu = { version = "0.6", features = ["futures"] }
lazy_static = "1.4"
enum-map = "0.6"
serde = "1.0"
futures = { version = "0.3", features = ["compat"] }
async-trait = "0.1"
bytes = "0.5"
# Waiting for upstream fix
#trust-dns-resolver = "0.18.0-alpha.1"
http = "0.2"
