[package]
name = "taps"
version = "0.1.0"
authors = ["stuart <stu@reilly-family.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tokio-impl"]
tokio-impl = ["tokio", "tokio-util"]

[dependencies]
tokio = { version = "0.2", features = ["tcp", "udp", "blocking", "io-util", "time", "stream"], optional=true }
tokio-util = { version = "0.2", optional=true }
snafu = { version = "0.6", features = ["futures"] }
lazy_static = "1.4"
enum-map = "0.6"
serde = "1.0"
futures = { version = "0.3", features = ["compat"] }
async-trait = "0.1"
bytes = "0.5"
http = "0.2"
dns-lookup = "1.0"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.3"
tokio-macros = "0.2"
